[package]
name = "so-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
goblin = "0.5.1"
indicatif = "0.16.2"
itertools = "0.10.3"
walkdir = "2.3.2"
